vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_if_condition.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_if_condition.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     '' == fn () string {
      |     ~~~~~~~~~~~~~~~~~~~~
    3 |         if $embed_file(@FILE).path == '' {
    4 |             return 'a'
