vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_if_condition.vv
fn main() {
	'' == fn () string {
		if $embed_file(@FILE).path == '' {
			return 'a'
		}
		return 'b'
	}()
}
